--- a/ProyectoInge1/ProyectoInge1/Web.config
+++ b/ProyectoInge1/ProyectoInge1/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=10.1.4.127;Initial Catalog=BD_IngeGrupo4;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BD_IngeGrupo4Entities" connectionString="metadata=res://*/Models.EntityF.csdl|res://*/Models.EntityF.ssdl|res://*/Models.EntityF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.127;initial catalog=BD_IngeGrupo4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BD_IngeGrupo4Entities1" connectionString="metadata=res://*/Models.ModuloUsuario.csdl|res://*/Models.ModuloUsuario.ssdl|res://*/Models.ModuloUsuario.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.127;initial catalog=BD_IngeGrupo4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
