--- a/ProyectoInge1/ProyectoInge1/Web.config
+++ b/ProyectoInge1/ProyectoInge1/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="mailAccount" value="azure_1038ad0daa4d7faeb4eb9374e654ddda@azure.com" />
+    <add key="mailPassword" value="luigui116050657" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -53,7 +55,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
