--- a/ProyectoInge1/ProyectoInge1/Web.config
+++ b/ProyectoInge1/ProyectoInge1/Web.config
@@ -5,11 +5,11 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity 10.1.4.127 Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=10.1.4.127;Initial Catalog=BD_IngeGrupo4;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="10.1.4.127;Initial Catalog=BD_IngeGrupo4;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="BD_IngeGrupo4Entities" connectionString="metadata=res://*/Models.EntityF.csdl|res://*/Models.EntityF.ssdl|res://*/Models.EntityF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.127;initial catalog=BD_IngeGrupo4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="BD_IngeGrupo4Entities1" connectionString="metadata=res://*/Models.ModuloUsuario.csdl|res://*/Models.ModuloUsuario.ssdl|res://*/Models.ModuloUsuario.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.127;initial catalog=BD_IngeGrupo4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
