inicio de la creacion ReqFun

--- a/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
+++ b/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ReqFuncionalController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Global.asax.cs">
@@ -274,6 +275,7 @@
     <Compile Include="Models\ReqFuncional.cs">
       <DependentUpon>ModuloUsuario.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ReqFunlController.cs" />
     <Compile Include="Models\Telefono.cs">
       <DependentUpon>ModuloUsuario.tt</DependentUpon>
     </Compile>
@@ -369,9 +371,11 @@
     <Content Include="Views\Usuarios\Detalles.cshtml" />
     <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Usuarios\Eliminar.cshtml" />
+    <Content Include="Views\ReqFuncional\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\ReqFunl\" />
     <Folder Include="Views\Req_Funcionales\" />
   </ItemGroup>
   <ItemGroup>
