--- a/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
+++ b/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
@@ -238,6 +238,8 @@
     </Compile>
     <Compile Include="Helpers\Helpers.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ApplyFormatInEditModeAttribute.cs" />
+    <Compile Include="Models\ApplyFormatInEditModeAttribute1.cs" />
     <Compile Include="Models\CriterioAceptacion.cs">
       <DependentUpon>ModuloUsuario.tt</DependentUpon>
     </Compile>
@@ -317,7 +319,6 @@
       <DependentUpon>ModuloUsuario.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\DatePickerReady.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
