ägregado de nuevo detalles requerimiento

--- a/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
+++ b/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
@@ -461,6 +461,7 @@
     <Content Include="Views\ReqFuncional\Index.cshtml" />
     <Content Include="Views\ReqFuncional\Create.cshtml" />
     <Content Include="Views\Proyectos\Create.cshtml" />
+    <Content Include="Views\ReqFuncional\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
