--- a/ProyectoInge1/ProyectoInge1/Web.config
+++ b/ProyectoInge1/ProyectoInge1/Web.config
@@ -9,17 +9,15 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-<<<<<<< HEAD
 
     <add name="DefaultConnection" connectionString="data source=DESKTOP-2K60KC7\SQLEXPRESS;Initial Catalog=BD_IngeGrupo4;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="BD_IngeGrupo4Entities" connectionString="metadata=res://*/Models.EntityF.csdl|res://*/Models.EntityF.ssdl|res://*/Models.EntityF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2K60KC7\SQLEXPRESS;initial catalog=BD_IngeGrupo4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="BD_IngeGrupo4Entities1" connectionString="metadata=res://*/Models.ModuloUsuario.csdl|res://*/Models.ModuloUsuario.ssdl|res://*/Models.ModuloUsuario.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2K60KC7\SQLEXPRESS;initial catalog=BD_IngeGrupo4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-=======
-<add name="DefaultConnection" connectionString="data source=TOSHIBA\SQLEXPRESS;Initial Catalog=BD;Integrated Security=True" providerName="System.Data.SqlClient" />
-<!--    <add name="DefaultConnection" connectionString="data source=10.1.4.127;Initial Catalog=BD_IngeGrupo4;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+
+    <!--<add name="DefaultConnection" connectionString="data source=TOSHIBA\SQLEXPRESS;Initial Catalog=BD;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="data source=10.1.4.127;Initial Catalog=BD_IngeGrupo4;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="BD_IngeGrupo4Entities" connectionString="metadata=res://*/Models.EntityF.csdl|res://*/Models.EntityF.ssdl|res://*/Models.EntityF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.127;initial catalog=BD_IngeGrupo4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="BD_IngeGrupo4Entities1" connectionString="metadata=res://*/Models.ModuloUsuario.csdl|res://*/Models.ModuloUsuario.ssdl|res://*/Models.ModuloUsuario.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.4.127;initial catalog=BD_IngeGrupo4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
->>>>>>> 9ffa6de6925892a1c44d73f376e67a48b8d0158d
 
 
   </connectionStrings>
