--- a/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
+++ b/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
@@ -463,6 +463,8 @@
     <Content Include="Views\ReqFuncional\Create.cshtml" />
     <Content Include="Views\Proyectos\Create.cshtml" />
     <Content Include="Views\ReqFuncional\Details.cshtml" />
+    <Content Include="Views\Proyectos\Detalles.cshtml" />
+    <Content Include="Views\Proyectos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
