--- a/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
+++ b/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
@@ -472,6 +472,7 @@
     <Content Include="Views\Proyectos\Index.cshtml" />
     <Content Include="Views\Gestion\Index.cshtml" />
     <Content Include="Views\GestCambios\Index.cshtml" />
+    <Content Include="Views\GestCambios\Detalles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
