--- a/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
+++ b/ProyectoInge1/ProyectoInge1/ProyectoInge1.csproj
@@ -472,10 +472,10 @@
     <Content Include="Views\Proyectos\Detalles.cshtml" />
     <Content Include="Views\Proyectos\Index.cshtml" />
     <Content Include="Views\GestCambios\Index.cshtml" />
-
     <Content Include="Views\GestCambios\Solicitudes.cshtml" />
     <Content Include="Views\GestCambios\Details.cshtml" />
     <Content Include="Views\GestCambios\Detalles.cshtml" />
+    <Content Include="Views\GestCambios\Details_Hist.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
